Link more FOLIOtips ui-inventory

--- a/_data/repos-metadata.yml
+++ b/_data/repos-metadata.yml
@@ -66,6 +66,8 @@ ui-finance:
 ui-inventory:
   urlUserTips: https://wiki.folio.org/display/FOLIOtips/Inventory
   urlAppSettings: https://wiki.folio.org/display/FOLIOtips/Settings+-+Inventory
+  urlsOther:
+    - https://wiki.folio.org/display/FOLIOtips/Single+Record+Import
 
 ui-invoice:
   urlUserTips: https://wiki.folio.org/display/FOLIOtips/Invoices
