Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -402,6 +402,7 @@ mod-finance:
       - budgets
       - exchange-rate
       - expense-classes
+      - finance-fund-codes-expense-classes
       - fiscal-years
       - fund-types
       - funds
