Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -231,6 +231,7 @@ mod-inventory-storage:
       - inventory-view
       - item-damaged-statuses
       - item-storage
+      - item-storage-dereferenced
       - item-sync
       - item-note-type
       - alternative-title-type
