List missing api-doc FOLIO-3231

--- a/_data/api-missing.yml
+++ b/_data/api-missing.yml
@@ -6,6 +6,7 @@ edge-dematic:
 edge-inn-reach:
 edge-search-srs:
 folio-spring-base:
+mod-bulk-edit:
 mod-data-export-spring:
 mod-data-export-worker:
 mod-ebsconet:
