--- a/_data/api.yml
+++ b/_data/api.yml
@@ -210,6 +210,7 @@ mod-inventory-storage:
     version1: true
     directory: ramls
     files:
+      - authorities
       - bound-with-part
       - holdings-sources
       - holdings-storage
@@ -256,6 +257,8 @@ mod-inventory-storage:
       - shelf-location
       - statistical-code
       - statistical-code-type
+    excludes:
+      - authorities
     ramlutil: ramls/raml-util
 
 mod-inventory-update:
