Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -211,6 +211,7 @@ mod-inventory-storage:
     directory: ramls
     files:
       - authorities
+      - authority-note-type
       - bound-with-part
       - holdings-sources
       - holdings-storage
