Include now configured api-doc FOLIO-3231

--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -93,6 +93,7 @@ remote-integration:
     - edge-caiasoft
     - edge-dematic
     - mod-ebsconet
+    - mod-idm-connect
     - mod-inn-reach
     - edge-inn-reach
     - mod-remote-storage
