Using api-doc at folio-vertx-lib FOLIO-2898

--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -124,6 +124,7 @@ other:
   modules:
     - folio-custom-fields
     - folio-spring-base
+    - folio-vertx-lib
     - acq-models
     - data-import-raml-storage
     - mod-eusage-reports
