Add new folio-export-common schemas FOLIO-2922
Do not yet have a way to configure
So piggyback on api.yml

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -811,6 +811,15 @@ data-import-raml-storage:
     schemasOnly: true
     rmb: false
 
+folio-export-common:
+  - label: null
+    version1: true
+    directory: .
+    ramlutil: null
+    schemasDirectory: .
+    schemasOnly: true
+    rmb: false
+
 # Deprecated
 mod-vendors:
   - label: null
