Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -479,6 +479,7 @@ mod-orders-storage:
       - acquisitions-unit
       - alert
       - configuration
+      - export_history
       - order-invoice-relns
       - order-templates
       - pieces
