--- a/_data/api.yml
+++ b/_data/api.yml
@@ -210,6 +210,7 @@ mod-inventory-storage:
     version1: true
     directory: ramls
     files:
+      - async-migration
       - authorities
       - authorities-reindex
       - authority-note-type
