Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -256,6 +256,7 @@ mod-inventory-storage:
       - oai-pmh-view
       - record-bulk
       - related-instance-type
+      - related-instances
       - service-point
       - service-points-user
       - shelf-location
