Sync old config mod-organizations storage
Workaround to ease monitoring scripts

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -526,6 +526,7 @@ mod-organizations-storage:
       - email
       - interface
       - organization
+      - organization_type
       - phone_number
       - url
     ramlutil: ramls/raml-util
