Sync old config mod-organizations storage
Workaround to ease monitoring scripts

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -181,6 +181,7 @@ mod-circulation-storage:
       - patron-action-session
       - patron-notice-policy
       - staff-slips
+      - tlr-feature-toggle-job.raml
     ramlutil: ramls/raml-util
 
 mod-copycat:
