Update some work maintenance notes

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -1,3 +1,6 @@
+# Note: This data file is deprecated.
+# See https://dev.folio.org/reference/api/#explain-gather-config
+
 # List of locations of RAML files in each raml-related repository.
 #
 # Used by various facilities:
