Move mod-shared-index mod-meta-storage FOLIO-3485

--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -35,7 +35,7 @@ inventory:
     - mod-inventory
     - mod-inventory-storage
     - mod-inventory-update
-    - mod-shared-index
+    - mod-meta-storage
     - mod-kb-ebsco-java
     - mod-oai-pmh
     - edge-oai-pmh
