--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -6,6 +6,7 @@ login:
   modules:
     - mod-login
     - mod-login-saml
+    - mod-authtoken
     - mod-password-validator
     - mod-permissions
 users:
