--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -84,6 +84,7 @@ data-import:
     - mod-data-import
     - mod-data-import-converter-storage
     - mod-data-export-spring
+    - mod-data-export-spring-migrated
     - mod-data-export-worker
     - mod-data-export
     - mod-source-record-manager
