Add mod-entities-links FOLIO-2922

--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -107,6 +107,7 @@ utilities:
   title: Utilities and tools
   description: Notes, tags, calendar, etc.
   modules:
+    - mod-entities-links
     - mod-notes
     - mod-tags
     - mod-calendar
