Trigger PR for config-api-endpoints.json FOLIO-1316

--- a/.github/workflows/pr-config-apidocs.yml
+++ b/.github/workflows/pr-config-apidocs.yml
@@ -8,6 +8,7 @@ on:
     branches: [ ongoing-config-apidocs ]
     paths:
       - '_data/config-apidocs.json'
+      - '_data/config-api-endpoints.json'
 
 jobs:
   create-pr:
