--- a/.github/workflows/gather-config-apidocs.yml
+++ b/.github/workflows/gather-config-apidocs.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         commit_message: Apply automatic changes
         branch: ongoing-config-apidocs
-        file_pattern: _data/config-apidocs.json
+        file_pattern: _data/config-apidocs.json _data/config-api-endpoints.json
     - name: Run if changes have been detected
       if: ${{ steps.auto-commit-action.outputs.changes_detected == 'true' }}
       run: echo "Changes were committed."
