--- a/.github/workflows/gather-schema-changes.yml
+++ b/.github/workflows/gather-schema-changes.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Setup Go
+      uses: actions/setup-go@v3
+
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
@@ -36,11 +39,14 @@ jobs:
         yarn --cwd $WF_HOME install
         yarn --cwd $WF_HOME list --pattern @apidevtools
 
-    - name: Install other dependencies
-      run: brew install jd
+    - name: Install Go dependencies
+      run: |
+        go install github.com/josephburnett/jd@latest
 
     - name: Run script
-      run: python $WF_HOME/gather_schema_changes.py -b R2-2022 -l info
+      run: |
+        export PATH=$PATH:$(go env GOPATH)/bin
+        python $WF_HOME/gather_schema_changes.py -b R2-2022 -l info
 
     - name: Add media type
       run: echo -e 'text/plain\tdiff' | sudo tee -a /etc/mime.types
